force-app/main/default/objects/sf_devops__Deployment_Result__c/fields/sf_devops__Check_Deploy_Date__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Check_Deploy_Date__c</fullName>
    <description>The Datetime when the Check Deploy was finished</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Check Deploy Date</label>
    <type>DateTime</type>
</CustomField>