force-app/main/default/objects/sf_devops__Deployment_Result__c/fields/sf_devops__Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Completion_Date__c</fullName>
    <description>The Datetime when this deployment completed</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Completion Date</label>
    <type>DateTime</type>
</CustomField>